# terra-ems-simulator

./: .gitignore  Dockerfile  README.md  README.zh-CN.md  pyproject.toml
config/: devices.yaml
config/scenarios/: auto-parts-factory.yaml  chemical-plant.yaml  data-center.yaml  electronics-factory.yaml  food-company.yaml  hotel.yaml  office-building.yaml  pharmaceutical-plant.yaml  shopping-mall.yaml  textile-mill.yaml
config/sites/: huawei-food.site.yaml
scripts/: gen_devices_from_site.py
src/simulator/: __init__.py  __main__.py  modbus_sim.py  patterns.py
